--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "expo": "^35.0.0",
     "expo-font": "~7.0.0",
+    "lottie-react-native": "^3.3.2",
     "native-base": "^2.13.8",
     "react": "16.8.3",
     "react-dom": "16.8.3",
@@ -22,7 +23,8 @@
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.0",
     "react-redux": "^7.1.3",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
